--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^7.0.5",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
+    "class-validator": "^0.14.0",
     "nodemailer": "^6.9.3",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -39,6 +44,7 @@
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.8",
+    "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
