--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^7.0.5",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nodemailer": "^6.9.3",
     "qrcode": "^1.5.3",
