--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nest-winston": "^1.9.3",
     "nodemailer": "^6.9.3",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
